@@ -12,7 +12,7 @@
 	<li class="<?=$this->uri->segment(1) == 'printing' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/printing"><span><?=t('Printing')?></span></a></li>
 	<li class="<?=$this->uri->segment(1) == 'settings' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/settings"><span><?=t('Settings')?></span></a></li>
 <? }else{ ?>
-	<li class="<?=$this->uri->segment(1) == 'usermail' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/usermail"><span><?=t('Mail')?></span></a></li>
+	<li class="<?=$this->uri->segment(1) == 'mail' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/mail"><span><?=t('Mail')?></span></a></li>
 	<li class="<?=$this->uri->segment(1) == 'downloads' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/downloads"><span><?=t('Downloads')?></span></a></li>
 	<li class="<?=$this->uri->segment(1) == 'userinfo' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/userinfo"><span><?=t('User info')?></span></a></li>
 	<li class="<?=$this->uri->segment(1) == 'album' ? 'active': '';?>"><a href="<?=FORMPREFIX?>/album"><span><?=t('Album')?></span></a></li>
