@@ -1,15 +1,0 @@
-<html>
-
-<head>
-
-<title>403 Forbidden</title>
-
-</head>
-
-<body bgcolor='#ffffff'>
-
-<p>Directory access is forbidden.<p>
-
-</body>
-
-</html>
